--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "baselines/models/ConLID"]
-	path = baselines/models/ConLID
+	path = baselines/3rd_party/ConLID
 	url = https://github.com/epfl-nlp/ConLID.git
