fix typo in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ baselines/results*
 baselines/logs/
 baselines/models/
 baselines/predictions/
-baselinse/cm/
+baselines/cm/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
